--- a/src/services/select/EmployeeSelection.module.scss
+++ b/src/services/select/EmployeeSelection.module.scss
@@ -1,15 +1,56 @@
-.formControl{
+.box {
+  -webkit-animation: roll-in-blurred-right 0.65s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: roll-in-blurred-right 3s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+@-webkit-keyframes roll-in-blurred-right {
+  0% {
+    -webkit-transform: translateX(-1000px) rotate(-720deg);
+    transform: translateX(-1000px) rotate(-720deg);
+    -webkit-filter: blur(50px);
+    filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+@keyframes roll-in-blurred-right {
+  0% {
+    -webkit-transform: translateX(-1000px) rotate(-720deg);
+    transform: translateX(-1000px) rotate(-720deg);
+    -webkit-filter: blur(50px);
+    filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.formControl {
   @media (max-width: 600px) {
     padding: 0 !important;
   }
 }
-.inputLable{
+
+.inputLable {
   @media (max-width: 600px) {
     padding: 0 !important;
     font-size: 14px !important;
   }
 }
-.select{
+
+.select {
   @media (max-width: 600px) {
     padding: 10px !important;
     font-size: 14px !important;
@@ -17,7 +58,7 @@
   }
 }
 
-.menuItem{
+.menuItem {
   @media (max-width: 600px) {
     padding: 10px !important;
     font-size: 12px !important;
