--- a/src/components/table/Table.module.scss
+++ b/src/components/table/Table.module.scss
@@ -1,3 +1,4 @@
+
 .itemsArrow {
   display: flex;
   align-items: center;
@@ -25,15 +26,18 @@
 }
 
 .line {
-  @media (min-width: 670px) {
-    &:nth-child(1) {
-      min-width: 250px !important;
-    }
-    &:nth-child(2) {
-      min-width: 90px !important;
-    }
+&:nth-child(1){
+  width: 35%;
+}
+  &:nth-child(2){
+    width: 15%;
   }
-
+  &:nth-child(3){
+    width: 15%;
+  }
+  &:nth-child(4){
+    width: 35%;
+  }
   @media (max-width: 600px) {
     font-size: 14px !important;
     padding: 10px 5px !important;
